--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^11.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
